# Phantom

./: .gitignore  session-ses_1197.md  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/phantom/: MainActivity.kt  PhantomApp.kt
app/src/main/kotlin/com/phantom/bridge/: AndroidKeystoreCallback.kt
app/src/main/kotlin/com/phantom/model/: Chat.kt  Message.kt
app/src/main/kotlin/com/phantom/service/: PhantomForegroundService.kt
app/src/main/kotlin/com/phantom/ui/components/: ChatBubble.kt  ContactItem.kt  MessageInput.kt  TopBar.kt
app/src/main/kotlin/com/phantom/ui/navigation/: NavGraph.kt
app/src/main/kotlin/com/phantom/ui/screens/: AddContactScreen.kt  ChatListScreen.kt  ChatScreen.kt  QrDisplayScreen.kt  QrScannerScreen.kt  SettingsScreen.kt
app/src/main/kotlin/com/phantom/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/kotlin/com/phantom/viewmodel/: ChatListViewModel.kt  ChatViewModel.kt  SettingsViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/crypto/: cipher.rs  ephemeral.rs  identity.rs  kdf.rs  message.rs  mod.rs  static_key.rs  types.rs
core/src/keystore/: mock.rs  mod.rs  traits.rs
core/src/p2p/: error.rs  mod.rs  receive.rs  send.rs  stream.rs
core/src/storage/: contact.rs  engine.rs  error.rs  field.rs  master_key.rs  message.rs  mod.rs  models.rs
core/src/tor/: client.rs  error.rs  hidden_service.rs  mod.rs
core/src/wire/: constants.rs  mod.rs  packet.rs  padding.rs
ffi/: Cargo.toml  uniffi.toml
ffi/src/: lib.rs
logs/: 0_build.txt
scripts/: build-rust-android.ps1  generate-bindings.ps1
