[package]
name = "phantom-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "phantom_ffi"

[dependencies]
core = { path = "../core", package = "phantom-core", default-features = false }
uniffi = "0.28"
tokio = { version = "1", features = ["rt", "macros"] }
sha3 = "0.10"
data-encoding = "2.6"
tracing = "0.1"

[features]
default = []
tor = ["core/tor"]
